<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/lation"
        android:textSize="12sp"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="50dp" >

        <com.baidu.mapapi.map.MapView
            android:id="@+id/mapView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="true" />

        <Button
            android:id="@+id/lbs_lacbtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_loc" />

        <Button
            android:id="@+id/lbs_okbtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:background="@drawable/click_bg"
            android:padding="6dp"
            android:text="@string/update" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#46c2a6" >

        <ImageView
            android:id="@+id/lbs_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/app_name"
            android:padding="6.0dip"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/lbs_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            android:textColor="#fff"
            android:textSize="20.0sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="49dp"
            android:background="@drawable/top_bg" />
    </RelativeLayout>

</FrameLayout>