<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <include layout="@layout/main_top" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/itembg"
        android:padding="8dp" >

        <ImageView
            android:id="@+id/main_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/main_home" />

        <LinearLayout
            android:id="@+id/main_temp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/main_img"
            android:orientation="horizontal"
            android:paddingRight="20dp" >

            <TextView
                android:id="@+id/main_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/left_kh" />

            <TextView
                android:id="@+id/main_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right_kh" />
        </LinearLayout>

        <TextView
            android:id="@+id/line"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/main_temp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@id/main_img"
            android:background="@drawable/top_bg" />

        <TextView
            android:id="@+id/main_addr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@id/main_img"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textSize="12sp" >
        </TextView>

        <ImageView
            android:id="@+id/editok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/line"
            android:contentDescription="@string/app_name"
            android:paddingRight="6dp"
            android:paddingTop="3dp"
            android:src="@drawable/cp_edit" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/top_bg" />

            <LinearLayout
                android:id="@+id/main_suba"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/clickd_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:visibility="gone" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/main_00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/suba"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/clickd_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:visibility="gone" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/main_01" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/mverify"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/clickd_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:visibility="gone" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/main_02" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/order"
                    android:textSize="18sp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/main_icm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/clickd_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:visibility="gone" >

                <ImageView
                    android:id="@+id/amt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/main_03" />

                <TextView
                    android:id="@+id/amte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@id/amt"
                    android:text="@string/ic"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/am_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_toRightOf="@id/amte"
                    android:background="@drawable/msg_bg"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="#fff"
                    android:textSize="12sp"
                    android:visibility="gone" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/main_lbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/clickd_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:visibility="gone" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/main_04" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/lbs"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/main_zhe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/clickd_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:visibility="gone" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/main_05" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/zhe"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/clickd_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="25dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/main_ex" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/exit"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>